<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoppingCartItem"
            type="com.example.zad5_shopping_app.data.ShoppingCartItem" />
        <variable
            name="shoppingCartViewModel"
            type="com.example.zad5_shopping_app.ui.shopping_cart.ShoppingCartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shopping_cart_item_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_name_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{shoppingCartItem.product.name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            tools:text="test" />

        <Button
            android:id="@+id/plus_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{() -> shoppingCartViewModel.addProduct(shoppingCartItem.product)}"
            android:text="@string/plus_sign"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quantity_cart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantity_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@{String.valueOf(shoppingCartItem.quantity)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/minus_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="3" />

        <Button
            android:id="@+id/minus_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{() -> shoppingCartViewModel.removeProduct(shoppingCartItem.product)}"
            android:text="@string/minus_sign"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>