...
        tools:layout="@layout/fragment_product_details" >
        <argument
            android:name="product"
            app:argType="com.example.zad5_shopping_app.data.Product" />
    </fragment>
    <fragment
        android:id="@+id/navigation_shopping_cart"
        android:name="com.example.zad5_shopping_app.ui.shopping_cart.ShoppingCartListFragment"
        android:label="Shopping cart"
        tools:layout="@layout/fragment_shopping_cart_list" />
    <fragment
        android:id="@+id/navigation_add_product"
        android:name="com.example.zad5_shopping_app.ui.product_add.AddProductFragment"
        android:label="AddProductFragment"
        tools:layout="@layout/fragment_product_add">
...
