...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.shopping_cart.ShoppingCartListFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shopping_cart_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/price_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/checkout_button"
            app:layout_constraintEnd_toEndOf="parent"
...
